[package]
name = "serverless_demo"
version = "0.1.0"
authors = ["robnanarivo <robby.xi.qiu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serverless_demo_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[[bin]]
name = "serverless_demo_test"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "=0.2.61"
ssvm_process_interface = "0.1.3"
serde_json = "1.0"
rand = "0.8.4"